Official Real Release
Fixed version issues and included JavaFX and Java.
Now when you download it it should work directly.